utopia-project/force-app/main/default/objects/Certification__mdt/Certification__mdt.object-meta.xml
<CustomObject>
    <label>Certification</label>
    <pluralLabel>Certifications</pluralLabel>
</CustomObject>