utopia-project/force-app/main/default/objects/Certification__mdt/fields/Authorized_Since__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Since__c</fullName>
    <label>Authorized Since</label>
    <length>50</length>
    <type>Text</type>
</CustomField>