utopia-project/force-app/main/default/objects/Certification__mdt/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>