utopia-project/force-app/main/default/objects/Certification__mdt/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VERIFIED</fullName>
            </value>
            <value>
                <fullName>INFERRED</fullName>
            </value>
            <value>
                <fullName>NEEDS_REVIEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>