utopia-project/force-app/main/default/objects/Certification__mdt/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>