utopia-project/force-app/main/default/objects/Certification__mdt/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>