utopia-project/force-app/main/default/objects/Certification__mdt/fields/Scope_Notes__c.field-meta.xml
<CustomField>
    <fullName>Scope_Notes__c</fullName>
    <label>Scope Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>